# skifteskift

./: .clang-format  .gitignore  CMakeLists.txt  README.md  skifteskift.jucer  testing.filtergraph
Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
